          - Naemon:
            - update core to 1.4.1
            - update livestatus to 1.4.1
          - Grafana:
            - update to 9.3.6
            - update pnp datasource
            - Loki update to 2.7.2
          - Gearman:
            - Gearmand update 1.1.20
            - Mod-Gearman module update 5.0.2
            - update mod-gearman-worker-go to 1.3.0
          - Mysql:
            - change tmpdir to ~/var/tmp
          - Prometheus
            - Prometheus 2.37.5
            - promlens 0.3.0
          - InfluxDB
            - add influxdb_show_cardinality script
            - add influxdb_vim_series script
          - Ansible 2.9.27
          - Monitoring-Plugins: update to 2.3.3
 
5.00     Nov 14 2022
          - DEPRECATION WARNING: the following components got removed
            - python 2 modules
          - OMD:
            - add build support for rhel9
            - add build support for ubuntu 22.04
            - add build support for opensuse 15.4
          - Thruk: update to 3.00
          - Naemon:
            - update core to 1.4.0
            - update livestatus to 1.4.0
            - update vimvault to 1.4.0
            - disable writing status.dat
          - rrdtool: Update to 1.8.0
          - Icinga2 update to 2.13.4
          - Prometheus
            - node_exporter 1.4.0
            - pushgateway 1.4.3
            - alertmanager 0.24.0
            - blackbox_exporter 0.22.0
          - Grafana:
            - update to 9.2.4
            - update pnp datasource
            - update thruk datasource
            - Loki update to 2.7.0
          - Dokuwiki
            - Updated to Version 2022-07-31
          - VictoriaMetrics 1.79.5
          - Gearman:
            - Mod-Gearman module update 4.0.4
            - update mod-gearman-worker-go to 1.2.3
          - LMD: Update 2.1.2
          - Monitoring-Plugins: update to 2.3.2

4.60     Aug 12 2022
          - Naemon:
            - update core to 1.3.1