@@ -25,6 +25,7 @@ next:
             - Gearmand update 1.1.20
             - Mod-Gearman module update 5.0.2
             - update mod-gearman-worker-go to 1.3.0
+            - do not install c-worker anymore
           - Mysql:
             - change tmpdir to ~/var/tmp
           - Prometheus
